--- a/memo_flutter/pubspec.yaml
+++ b/memo_flutter/pubspec.yaml
@@ -7,10 +7,16 @@ environment:
   sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
+  shared_preferences:
   cell_calendar: ^0.8.0
   flutter:
     sdk: flutter
 
+  flutter_local_notifications: ^13.0.0
+  permission_handler: ^8.3.0
+  timezone: ^0.9.2
+  firebase_messaging: ^11.4.4
+  firebase_core: ^2.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
