reminder service 만듦

--- a/memo_flutter/pubspec.yaml
+++ b/memo_flutter/pubspec.yaml
@@ -8,8 +8,16 @@ environment:
 
 dependencies:
   cell_calendar: ^0.8.0
+  firebase_messaging: ^14.7.9
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^16.3.0
+  get: ^4.6.6
+  http: ^1.1.2
+  image_picker: ^1.0.5
+  intl: ^0.18.1
+  syncfusion_flutter_calendar: ^24.1.43
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
